slurm_outputs/errors/merger_file_creation_2799187.err
  File "<fstring>", line 1
    (simName=)
            ^
SyntaxError: invalid syntax
